Attempt at ngram vectorization, not enough docs

--- a/fast-text.ipynb
+++ b/fast-text.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
       "Read 0M words\n",
       "Number of words:  4169\n",
       "Number of labels: 20\n",
-      "Progress: 100.0% words/sec/thread:  513863 lr:  0.000000 loss:  0.648028 ETA:   0h 0m\n"
+      "Progress: 100.0% words/sec/thread:  404843 lr:  0.000000 loss:  0.591967 ETA:   0h 0m\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +191,8 @@
      "output_type": "stream",
      "text": [
       "N\t6000\n",
-      "P@1\t0.768\n",
-      "R@1\t0.768\n"
+      "P@1\t0.77\n",
+      "R@1\t0.77\n"
      ]
     }
    ],
@@ -492,11 +492,492 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Better preprocessing\n",
+    "We will now squash ingredients together to check how it changes accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_ingredients(recipe_list: List[str]) -> str:\n",
+    "    strip_ingredient = lambda ingredient: \"\".join([word.lower() for word in ingredient.split(\" \") if word.isalnum()])\n",
+    "    return \", \".join([strip_ingredient(ingredient) for ingredient in recipe_list])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_recipe_with_preprocessing(recipe: dict) -> str:\n",
+    "    \"\"\" Preprocess recipe to a fastText-compatible labeled txt file. \"\"\"\n",
+    "    doc = preprocess_ingredients(recipe['ingredients'])\n",
+    "    try:\n",
+    "        return f\"__label__{recipe['cuisine']} {doc}\\n\"\n",
+    "    except KeyError:\n",
+    "        return f\"{doc}\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/30000 [00:00<?, ?it/s]\u001b[A\n",
+      " 15%|█▍        | 4429/30000 [00:00<00:00, 44285.50it/s]\u001b[A\n",
+      " 34%|███▍      | 10341/30000 [00:00<00:00, 47889.55it/s]\u001b[A\n",
+      " 54%|█████▍    | 16185/30000 [00:00<00:00, 50630.11it/s]\u001b[A\n",
+      " 73%|███████▎  | 21976/30000 [00:00<00:00, 52604.01it/s]\u001b[A\n",
+      " 93%|█████████▎| 27936/30000 [00:00<00:00, 54522.94it/s]\u001b[A\n",
+      "100%|██████████| 30000/30000 [00:00<00:00, 55882.87it/s]\u001b[A\n",
+      "  0%|          | 0/9774 [00:00<?, ?it/s]\u001b[A\n",
+      " 60%|██████    | 5894/9774 [00:00<00:00, 58933.45it/s]\u001b[A\n",
+      "100%|██████████| 9774/9774 [00:00<00:00, 63710.55it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 684 ms, sys: 24 ms, total: 708 ms\n",
+      "Wall time: 698 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "labeled_docs_2 = [process_recipe_with_preprocessing(recipe) for recipe in tqdm(train)]\n",
+    "unlabeled_docs_2 = [process_recipe_with_preprocessing(recipe) for recipe in tqdm(test)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PREPROCESSED_TRAIN_PATH_2 = './data/train-labeled-2.txt'\n",
+    "PREPROCESSED_EVAL_PATH_2 = './data/eval-labeled-2.txt'\n",
+    "PREPROCESSED_TEST_PATH_2 = './data/test-2.txt'\n",
+    "MODEL_PATH_2 = './models/fasttext-2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_docs_2, eval_docs_2 = train_test_split(labeled_docs_2, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24000, 6000)"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_docs), len(eval_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PREPROCESSED_TRAIN_PATH_2, 'w') as train_file:\n",
+    "    train_file.writelines(train_docs_2)\n",
+    "    \n",
+    "with open(PREPROCESSED_EVAL_PATH_2, 'w') as eval_file:\n",
+    "    eval_file.writelines(eval_docs_2)\n",
+    "    \n",
+    "with open(PREPROCESSED_TEST_PATH_2, 'w') as test_file:\n",
+    "    test_file.writelines(unlabeled_docs_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 0M words\n",
+      "Number of words:  7688\n",
+      "Number of labels: 20\n",
+      "Progress: 100.0% words/sec/thread:  235806 lr:  0.000000 loss:  0.078481 ETA:   0h 0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./fastText/fasttext supervised -input {PREPROCESSED_TRAIN_PATH_2} -output {MODEL_PATH_2} -lr 0.275 -epoch 50 -wordNgrams 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N\t6000\n",
+      "P@1\t0.744\n",
+      "R@1\t0.744\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./fastText/fasttext test {MODEL_PATH_2}.bin {PREPROCESSED_EVAL_PATH_2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_labels = !./fastText/fasttext predict {MODEL_PATH}.bin {PREPROCESSED_TEST_PATH}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9774"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(predicted_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('__label__italian', '__label__british')"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_labels[0], predicted_labels[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensembling predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Submission generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>cuisine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24888</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43564</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21898</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6991</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37700</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Id  cuisine\n",
+       "0  24888  italian\n",
+       "1  43564  italian\n",
+       "2  21898  italian\n",
+       "3   6991  italian\n",
+       "4  37700  italian"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_subm = pd.read_csv('./input/sample_submission.csv')\n",
+    "sample_subm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_label(fasttext_label: str) -> str:\n",
+    "    return fasttext_label[len('__label__'):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>cuisine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24888</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43564</td>\n",
+       "      <td>brazilian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21898</td>\n",
+       "      <td>italian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6991</td>\n",
+       "      <td>moroccan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37700</td>\n",
+       "      <td>spanish</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Id    cuisine\n",
+       "0  24888    italian\n",
+       "1  43564  brazilian\n",
+       "2  21898    italian\n",
+       "3   6991   moroccan\n",
+       "4  37700    spanish"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subm = pd.DataFrame({\n",
+    "    'Id': [recipe['id'] for recipe in test],\n",
+    "    'cuisine': [extract_label(ft_label) for ft_label in predicted_labels]\n",
+    "})\n",
+    "subm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sanity checks\n",
+    "assert(subm.notna().all().all())\n",
+    "assert(sorted(sample_subm['Id'].unique()) == sorted(subm['Id'].unique()))\n",
+    "assert(sample_subm.shape == subm.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "_uuid": "313483786f339f90463372c7521c19febffde838"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./submissions/fasttext-tuned.csv'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subm_path = os.path.join('./submissions/', 'fasttext-tuned.csv')\n",
+    "subm_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "_uuid": "93117cab164c073d5582244e4ae2903f94a1243e"
+   },
+   "outputs": [],
+   "source": [
+    "subm.to_csv(subm_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████| 136k/136k [00:02<00:00, 58.8kB/s]\n",
+      "Successfully submitted to ML1819 - What's Cooking?"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle competitions submit -f {subm_path} -m \"fastText\" ml1819-whats-cooking"
+   ]
   }
  ],
  "metadata": {
